tests/positive/rule2_slice.safe
-- Test: rule2_slice
-- Description: Array slice with proven range.
--   Demonstrates safe array slicing where the slice bounds are
--   provably within the array's index range.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.2.p131:30aba5f5
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.2.p132:8613ecf4
-- Expected: ACCEPT

package safe_slice

   type index is range 1 to 100;
   type element is range 0 to 255;
   type buffer is array (index) of element;

   --  Last_In_Subrange: walks the selected subrange and retains the last seen element.
   --  Both First and Last are of type Index (1..100), so
   --  every array access within the loop is provably in bounds.
   function last_in_subrange (buf : buffer;
                              first : index;
                              last  : index) returns element
      current : element = 0;

      if first <= last
         for i in first to last
            --  I is in First..Last, both of type Index (1..100).
            --  Provably within Buffer's bounds.
            current = buf (i);


      return current;



