tests/negative/neg_rule2_empty.safe
-- Test: neg_rule2_empty
-- Description: Accessing an element of a potentially empty array.
--   When the array has a dynamic length that may be zero, accessing
--   index 1 is not provably within bounds.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.2.p131:30aba5f5
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.2.p132:8613ecf4
-- Expected: REJECT index_out_of_bounds

package Empty_Array_Test is

   type Element is range 0 .. 255;
   type Index is range 1 .. 100;
   type Flex_Array is array (Index range <>) of Element;

   --  First_Element: attempts to access the first element.
   --  If Arr is empty (Arr.Length = 0), there is no element at index 1.
   function First_Element (Arr : Flex_Array) return Element is
   begin
      return Arr (1);  -- ERROR: Arr may be empty
   end First_Element;

end Empty_Array_Test;
